# lux

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeLists.txt  Cargo.toml  Main  README.md  build.rs  init-llvm.sh
.config.tmp/: decltype.cc  heapalloc.cc  inline_attriute.cc  mmap.cc  munmap.cc  noexcept.cc  noreturn_attriute.cc  std_alignment_of.cc  std_allocate_shared.cc  std_bind.cc  std_condition_variable.cc  std_function.cc  std_make_shared.cc  std_mutex.cc  std_shared_ptr.cc  std_unique_ptr.cc  stdint_h.cc  thread.cc  tuple.cc  type_traits.cc  unordered_map.cc  unused_attribute.cc  virtualalloc.cc  vm_make_tag.cc  vm_protect.cc
.github/workflows/: test.yaml
benches/: hashmap_benchmark.rs
grammars/: early_errors.md
lux_internal/: Cargo.toml
lux_internal/src/: def.rs  lib.rs  structs.rs  unicode.rs  vm.rs
lux_internal/src/debug_tools/: signal_handling.rs
lux_internal/src/heap/: allocator.rs  marksweep.rs
lux_internal/src/heap/allocator/: virtual_heap_allocator.rs
lux_internal/src/parser/: ast.rs  error_formatter.rs  error_reporter.rs  node_ops.rs  parser_state.rs  parser_test_utils.rs  scanner_test.rs  scope.rs  scope_tree.rs  skip_parser_test.rs  skip_tree_builder.rs  source_position.rs  tc39_parser_test.rs
lux_internal/src/structs/: cell.rs  errors.rs  hash_map.rs  js_object.rs  natives.rs  object_record_test.rs  repr.rs  shape.rs  string.rs  traits.rs  util.rs
lux_internal/src/structs/object/: completion_record.rs  header.rs  label.rs  object_property.rs  property_descriptor.rs
lux_internal/src/structs/string/: rope.rs  string.rs  to_number.rs
lux_internal/src/unicode/: data.rs  ucd.rs
lux_internal/src/utility/: compare_node.rs  regional_allocator.rs
lux_internal/src/vm/: bytecode.rs  bytecode_type.rs
scripts/: env.sh  test.sh  ut.sh  vm_gen.sh
src/: alloc.h  bytecode.cc  bytecode.h  chars.cc  chars.h  context.rs  debug.rs  def.rs  heap-inl.h  heap.cc  heap.h  heap.rs  isolate.cc  isolate.h  lib.rs  macros.rs  main.cc  maybe.h  node.cc  node.h  parser.cc  parser.h  parser.rs  regexp.cc  regexp.h  reporter.cc  reporter.h  source_position.h  structs.rs  unicode.cc  unicode.h  unicode.rs  utility.rs  utils.cc  utils.h  vm.cc  vm.h  vm.rs  zone.cc  zone.h
src/__tests__/: parser_test.cc
src/ast/: ast.cc  ast.h
src/debug/: stacktrace.cc  stacktrace.h
src/debug_tools/: debug_log.rs
src/heap/: allocator.rs  copying.rs  handle.rs  heap.rs
src/heap/allocator/: aligned_heap_allocator.rs  allocated.rs  managed.rs  virtual_heap_allocator.rs
src/objects/: heap_object.cc  heap_object.h  instances.h  jsobject-inl.h  jsobject.cc  jsobject.h  object.cc  object.h  shape.cc  shape.h
src/parser/: ast.rs  ast_builder.rs  error_formatter.rs  error_reporter.rs  node_ops.rs  parser.rs  parser_def.rs  parser_range.rs  parser_state.rs  parser_test.rs  scanner.rs  scanner_test.rs  scope.rs  scope_tree.rs  skip_tree_builder.rs  source.rs  source_position.rs  tc39_parser_test.rs  token.rs
src/platform/: os-inl.h  os.cc  os.h  tls-posix-inl.h  tls-win-inl.h  tls.cc  tls.h
src/structs/: cell.rs  cmp.rs  convs.rs  errors.rs  hash_map.rs  internal_array.rs  js_globals.rs  js_object.rs  macros.rs  managed.rs  object.rs  object_record.rs  object_record_test.rs  object_records.rs  repr.rs  shadow_class.rs  shape.rs  string.rs
src/structs/natives/: function_proto_to_string.rs  native_function.rs
src/structs/object/: builder.rs  completion_record.rs  function.rs  header.rs  label.rs  object.rs  object_property.rs  property.rs  property_descriptor.rs  receiver.rs  symbol.rs
src/structs/string/: backend.rs  rope.rs  small_string.rs  string.rs  to_number.rs  u16_str.rs
src/unicode/: chars.rs  data.rs  ucd.rs  ucd_type.rs  utils.rs
src/utility/: align.rs  bitset.rs  bitutil.rs  compare_node.rs  exotic.rs  len.rs  regional_allocator.rs  scoped.rs
src/vm/: vm.rs
test/cases/: chars_test.cc  parser_test.cc  regexp_bytecode_test.cc  regexp_parse_test.cc  unicode_test.cc
test/cases/objects/: fixed_array_test.cc  jsstring_test.cc  smi_test.cc
test/data/unicode/: id_continue.txt  id_start.txt
test/unicode_texts/: identifier_continue.txt  identifier_start.txt  whitespaces.txt
test/utils/: compare_node.h  compare_position.h  compare_string.h  isolate_setup.h  readfile.h
vm_gen/: .gitignore  Cargo.toml
vm_gen/src/: builtins.rs  globals.rs  lib.rs  main.rs  vm_gen.rs  vm_gen_context.rs
