[package]
name = "lux"
version = "0.1.0"
authors = ["Taketoshi Aono <brn@b6n.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20.0"
libc = "0.2"
bitflags = "1.2"
num-traits = "0.2"
num-derive = "0.2"
num = "0.4"
static_assertions = "1.1.0"
once_cell = "1.7.2"
property = "0.3.3"
backtrace = "0.3"
signal-hook = "0.3.9"
itertools = "0.10.1"

[dev-dependencies]
criterion = {varsion = "0.3", features = ["html_reports"]}

[features]
default = []
nogc = []
debug = []

[[bench]]
name = "hashmap_benchmark"
harness = false

[[bin]]
name = "lux"
path = "src/main.rs"