[package]
name = "lux"
version = "0.1.0"
authors = ["Taketoshi Aono <brn@b6n.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20.0"
libc = "0.2"
bitflags = "1.2"
num-traits = "0.2"
num-derive = "0.2"
num = "0.4"
static_assertions = "1.1.0"
once_cell = "1.7.2"
property = "0.3.3"
backtrace = "0.3"
signal-hook = "0.3.9"
itertools = "0.10.1"
const_format = "0.2.14"
paste = "1.0"
termion = "1.5.6"
byteorder = "1"
threadpool = "1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
enum_index = "0.2.0"
enum_index_derive = "0.2.0"

[build-dependencies]
paste = "1.0"

[dev-dependencies]
indoc = "1.0"
criterion = {version = "0.3", features = ["html_reports"]}

[features]
default = []
nogc = []
debug = []
print_ast = []
print_ast_when_called = []

[[bench]]
name = "hashmap_benchmark"
harness = false

[[bin]]
name = "lux"
path = "src/main.rs"

[env]
LLVM_SYS_130_PREFIX = {value = './llvm/13.0.0', relative = true}
RUST_MIN_STACK = 8388608
RUST_BACKTRACE = 1
RUSTFLAGS = '-Awarnings'