[package]
name = "lux"
version = "0.1.0"
authors = ["Taketoshi Aono <brn@b6n.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["vm_gen", "lux_internal"]

[build-dependencies]
paste = "1.0"

[dev-dependencies]
indoc = "1.0"
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "hashmap_benchmark"
harness = false

[[bin]]
name = "lux"
path = "src/main.rs"